--- a/media.css
+++ b/media.css
@@ -1,15 +1,11 @@
+/*Regular above 800px!*/
+@media only screen and(min-width: 800px) {
 .bline {
     grid-column: 2 / 5;  
 } 
 
 .para {
     grid-column: 3 / 6;
-}
-
-.test {
-    font-family: monospace;
-    font-size: 20px;
-    grid-column: 1 / 4;
 }
 
 .right {
@@ -28,8 +24,8 @@
 
 .right2 {
     grid-column: 5 / 7;
-    margin-left: 40px;
-    padding-left: 30px;
+      margin-left: 40px;
+                padding-left: 30px;
    
     
 }
@@ -46,33 +42,10 @@
 .left {
     grid-column: 2 / 4;   
 }
-
-     
-
-@media only screen and (max-width: 420px) {
-    
-      .right2 {
-             grid-column: 2 / 6;
-             margin-bottom: 200;
-             margin-top: 150px;
-             font-size: 70%;
-            border: none;
-            margin-left: 0px;
-            padding-left: 0px;
-         }
-    
-    
-    
-      .right {
-             grid-column: 2 / 7;
-             margin-bottom: 10;
-             margin-left: 0px;
-          padding-left: 0px;
-          border: none;
-         }
 }
 
-@media only screen and (max-width: 800px) {
+/*Tablet device below 800px*/
+@media only screen and(min-width: 480px) (max-width: 800px) {
          .bline {
              grid-column: 2 / 7;
              margin-bottom: 100px;
@@ -136,8 +109,33 @@
          .int {
              grid-column: 1 / 7;             
          }
+
          
          }
+
+/*Mobile device below 420px!*/
+@media only screen and (min-width:0px) (max-width: 420px) {
+    
+      .right2 {
+             grid-column: 2 / 6;
+             margin-bottom: 200;
+             margin-top: 150px;
+             font-size: 70%;
+            border: none;
+            margin-left: 0px;
+            padding-left: 0px;
+         }
+    
+      .right {
+             grid-column: 2 / 7;
+             margin-bottom: 10;
+             margin-left: 0px;
+          padding-left: 0px;
+          border: none;
+         }
+    
+
+}
          
      
     
