--- a/media.css
+++ b/media.css
@@ -29,8 +29,8 @@
 
 .right2 {
     grid-column: 5 / 7;
-      margin-left: 40px;
-                padding-left: 30px;
+    margin-left: 40px;
+    padding-left: 30px;
    
     
 }
@@ -51,7 +51,18 @@
      
 /*Mobile*/
 @media only screen and (max-width: 420px) {
+    .left {
+        position: relative;
+        left:-40px;
+        width:120%;
+    }
     
+    .int{
+        position: relative;
+        left: -40px;
+        width: 95%;
+        
+    }
       .right2 {
              grid-column: 2 / 6;
              margin-bottom: 200;
@@ -60,6 +71,8 @@
             border: none;
             margin-left: 0px;
             padding-left: 0px;
+          position: relative;
+          left: -40px;
          }
     
       .right {
@@ -69,8 +82,22 @@
           padding-left: 0px;
           border: none;
          }
-    
 
+    .article {
+    display: grid;
+    display: -ms-grid;
+    grid-template-columns: 10px 1fr 1fr 1fr 1fr 1fr 10px; 
+    -ms-grid-template-columns: 10px 1fr 1fr 1fr 1fr 1fr 10px;
+    
+}
+    .q-left {
+        position: relative;
+        left: -30px;
+        width: 115%;
+    }
+    
+    
+    
 }
 
 /*tablet*/
@@ -142,6 +169,3 @@
          
          }
          
-     
-    
-    
