--- a/main.css
+++ b/main.css
@@ -30,7 +30,6 @@ html {
 .navbar a {
     
     color: #f2f2f2;
-    text-align: center;
     text-decoration: none;
     font-size: 17px;
     font-family: 'Open Sans', sans-serif;
@@ -70,8 +69,17 @@ html {
     letter-spacing: 2;
     font-size: 80%;
     height: 35px;
+    color: #f2f2f2;
+    text-align: center;
+    text-decoration: none;
+    font-family: 'Open Sans', sans-serif;
+    padding-top: 4px;
+    width: 200px;
+    vertical-align: middle;
+    display: inline-block;
+    margin-left:-2px;
 
-    
+
 }
 
 body {
