--- a/media.css
+++ b/media.css
@@ -1,4 +1,3 @@
-/*Regular above 800px*/
 .bline {
     grid-column: 2 / 5;  
 } 
@@ -49,20 +48,9 @@
 }
 
      
-/*Mobile*/
+
 @media only screen and (max-width: 420px) {
-    .left {
-        position: relative;
-        left:-40px;
-        width:120%;
-    }
     
-    .int{
-        position: relative;
-        left: -40px;
-        width: 95%;
-        
-    }
       .right2 {
              grid-column: 2 / 6;
              margin-bottom: 200;
@@ -71,9 +59,9 @@
             border: none;
             margin-left: 0px;
             padding-left: 0px;
-          position: relative;
-          left: -40px;
          }
+    
+    
     
       .right {
              grid-column: 2 / 7;
@@ -82,29 +70,12 @@
           padding-left: 0px;
           border: none;
          }
-
-    .article {
-    display: grid;
-    display: -ms-grid;
-    grid-template-columns: 10px 1fr 1fr 1fr 1fr 1fr 10px; 
-    -ms-grid-template-columns: 10px 1fr 1fr 1fr 1fr 1fr 10px;
-    
-}
-    .q-left {
-        position: relative;
-        left: -30px;
-        width: 115%;
-    }
-    
-    
-    
 }
 
-/*tablet*/
 @media only screen and (max-width: 800px) {
          .bline {
              grid-column: 2 / 7;
-             margin-bottom: 100px;
+             margin-bottom: 20%;
          }
          
         
@@ -165,7 +136,5 @@
          .int {
              grid-column: 1 / 7;             
          }
-
-         
-         }
-         
+        
+}
