--- a/main.css
+++ b/main.css
@@ -99,7 +99,7 @@ h1a {
     font-size: 180px;
     font-size: 15.5vw;
     line-height: 80%;
-    margin-top: 120px;
+    margin-top: 30%;
     grid-column: 2/7;
     
     
@@ -114,7 +114,7 @@ h1b {
     font-size: 180px;
     font-size: 15.0vw;
     line-height: 80%;
-    margin-bottom: 120px;
+    margin-bottom: 10%;
     grid-column: 2/7;
     width: 100%;
     height:auto;
