--- a/media.css
+++ b/media.css
@@ -88,7 +88,7 @@
     grid-template-columns: 10px 1fr 1fr 1fr 1fr 1fr 10px; 
     -ms-grid-template-columns: 10px 1fr 1fr 1fr 1fr 1fr 10px; 
 }
-
+}
 @media only screen and (max-width: 800px) {
          .bline {
              grid-column: 2 / 7;
@@ -169,3 +169,4 @@
 }
 
     
+   
