--- a/media.css
+++ b/media.css
@@ -82,8 +82,8 @@
          }
     
     .wrapper {
-    grid-template-columns: 10px 1fr 1fr 1fr 1fr 1fr 10px; 
-    -ms-grid-template-columns: 10px 1fr 1fr 1fr 1fr 1fr 10px; 
+    grid-template-columns: 10px 15% 15% 15% 15% 15% 10px; 
+    -ms-grid-template-columns: 10px 15% 15% 15% 15% 15% 10px; 
 }
     
 }
