--- a/media.css
+++ b/media.css
@@ -1,12 +1,16 @@
-    .wrapper {
+/* Desktop */ 
+
+.wrapper {
     display: grid;
     display: -ms-grid;
     grid-template-columns: 1fr 15% 15% 15% 15% 15% 1fr; 
     -ms-grid-template-columns: 1fr 15% 15% 15% 15% 15% 1fr;
 }
 
-.bline {
+.bline2 {
     grid-column: 2 / 5;  
+    position: relative;
+    float: left;
 } 
 
 .para {
@@ -21,12 +25,13 @@
 
 .right {
     grid-column: 5 / 7;
+    position: relative;
+    float: right;
 }
 
 .ima {
     grid-column: 1 / 5;
     margin-left: -10px;
-
 }
 
 .header {
@@ -53,20 +58,112 @@
     margin-left: 6px;
 }
 
-
 .left {
     grid-column: 2 / 4;   
 }
 
-     
 
-@media only screen and (max-width: 420px) {
+/* Small Laptop */
+
+.bline2 {
+    top: 0px;
+}
+
+/* Tablets */
+@media only screen and (max-width: 800px) {
     
-      .right2 {
-             grid-column: 2 / 6;
-             margin-bottom: 200;
-             margin-top: 150px;
-             font-size: 70%;
+   .bline2 {
+    grid-column: 2 / 7; 
+     top: -0px;
+    }
+    
+    .wrapper {
+        grid-template-columns: 30px 1fr 1fr 1fr 1fr 1fr 30px; 
+         -ms-grid-template-columns: 30px 1fr 1fr 1fr 1fr 1fr 30px; 
+} 
+    
+    .header {
+    grid-column: 2 / 7;
+        font-size: 200%;
+}
+    .bline {
+        margin-bottom; 0px;
+        grid-column: 2/7;
+    }
+    
+    .q-left {
+        grid-column: 3 /7;
+        margin-top: 120px;
+        padding-left: 0px;
+    }
+    
+     .left {
+        grid-column: 2 / 4;
+        margin-top: -50px;
+        margin-right: 0px;
+        padding-left: 0px;
+        padding-right: 10px;
+        padding-top: 30px;      
+         top: -50px;
+         position: relative;
+         display: block;
+            }    
+    
+    .p4 {
+        grid-column: 2 / 7
+        
+    }
+    
+    
+    
+    .int1 {
+        grid-column: 4 / 8;
+        padding: 0px;
+        font-size: 130%;
+        line-height: 110%;
+        padding-left: 50px;
+    
+}
+    
+     .ima {
+         grid-column: 1 / 8;
+         width: 110%;
+         height: auto;
+         }
+
+         
+     .right {
+         grid-column: 2 / 7;
+         margin-bottom: 10;
+         margin-left: -20;
+         }
+       
+         
+     .right2 {
+         grid-column: 2 / 6;
+         margin-bottom: 200;
+         margin-left: 0px;
+         margin-top: 150px;
+         padding-left: 30px;
+         font-size: 200%;
+         }
+         
+}
+
+     
+/* Mobile Phones */
+@media only screen and (max-width: 480px) {
+    
+    .wrapper {
+    grid-template-columns: 15px 1fr 1fr 1fr 1fr 1fr 15px; 
+    -ms-grid-template-columns: 15px 1fr 1fr 1fr 1fr 1fr 15px; 
+} 
+    
+    .right2 {
+            grid-column: 2 / 6;
+            margin-bottom: 200;
+            margin-top: 150px;
+            font-size: 170%;
             border: none;
             margin-left: 0px;
             padding-left: 0px;
@@ -74,42 +171,31 @@
     
     
       .right {
-             grid-column: 2 / 7;
-             margin-bottom: 10;
-             margin-left: 0px;
-          padding-left: 0px;
-          border: none;
+            grid-column: 2 / 7;
+            margin-bottom: 10;
+            margin-left: 0px;
+            padding-left: 0px;
+            border: none;
          }
     
-    .wrapper {
-    grid-template-columns: 10px 15% 15% 15% 15% 15% 10px; 
-    -ms-grid-template-columns: 10px 15% 15% 15% 15% 15% 10px; 
-}
-    
-}
-
-
-@media only screen and (max-width: 800px) {
-        .wrapper {
-    grid-template-columns: 20px 1fr 1fr 1fr 1fr 1fr 20px; 
-    -ms-grid-template-columns: 20px 1fr 1fr 1fr 1fr 1fr 20px; 
-}
-    
-    
-    .bline {
-             grid-column: 2 / 7;
-             margin-bottom: 20%;
-         }
-         
-        
-         .para {
+        .para {
              grid-column: 2 / 7;
          }
-
+    
+        .bline {
+             grid-column: 2 / 7;
+             margin-bottom: 70px;
+         }
+    
+            .bline2 {
+             grid-column: 2 / 7;
+             margin-bottom: 200px;
+                top: 0;
+         }
          
          .q-left {
              grid-column: 1 / 6;
-             margin-left: -164px;
+             margin-left: 40px;
              margin-top: 100px;
          }
          
@@ -117,42 +203,24 @@
              grid-column: 2 / 7;
              font-size: 160%;
          }
-         
-         .right {
-             grid-column: 2 / 7;
-             margin-bottom: 10;
-             margin-left: -20;
-         }
-         
-         h4 {
-             margin-bottom: 20px;
-         }
-         
-         .right2 {
-             grid-column: 2 / 6;
-             margin-bottom: 200;
-             margin-left: 0px;
-             margin-top: 150px;
-             padding-left: 30px;
-             font-size: 200%;
-         }
-         
+    
         .left {
-            grid-column: 1 / 7;
+            grid-column: 2 / 7;
             border-right: none;
             margin-top: 5px;
             padding-top: 10px;
             border-top: solid 10px white;
             margin-left: -50px;
+            margin-right: 0px;
             padding-left: 69px;
-            padding-right: 0px;
+            padding-right: 40px;
             padding-top: 30px;            
             }
          
          .ima {
              grid-column: 1 / 8;
              width: 110%;
-                 height: auto;
+             height: auto;
          }
          
          .int {
@@ -160,17 +228,13 @@
              margin-left: -30px;
          }
          
-    .int1 {
-    grid-column: 1 / 7;
-    margin-left: -35px;
-        font-size: 130%;
-        line-height: 110%;
+        .int1 {
+            grid-column: 1 / 7;
+            margin-left: -35px;
+            font-size: 130%;
+            line-height: 120%;
+            padding-bottom: 20px;
 }
 
-
-     
-
+    }
 }
-
-    
- 
