--- a/media.css
+++ b/media.css
@@ -7,6 +7,30 @@
     -ms-grid-template-columns: 1fr 15% 15% 15% 15% 15% 1fr;
 }
 
+
+.title {
+    font-size: 180px;
+    font-size: 15.5vw;
+    line-height: 80%;
+    margin-top: 25vh;
+    grid-column: 2/7;
+    width: 100%;
+    height:auto;
+    
+}
+
+.titleb {
+    font-size: 180px;
+    font-size: 15.0vw;
+    line-height: 80%;
+    margin-bottom: 10%;
+    grid-column: 2/7;
+    width: 100%;
+    height:auto;
+}
+
+
+
 .bline2 {
     grid-column: 2 / 5;  
     position: relative;
@@ -81,6 +105,27 @@
         grid-template-columns: 30px 1fr 1fr 1fr 1fr 1fr 30px; 
          -ms-grid-template-columns: 30px 1fr 1fr 1fr 1fr 1fr 30px; 
 } 
+    
+        .title {
+    font-size: 180px;
+    font-size: 19.5vw;
+    line-height: 70%;
+    margin-top: 25vh;
+    grid-column: 2/7;
+    width: 100%;
+    height:auto;
+    
+}
+
+.titleb {
+    font-size: 180px;
+    font-size: 20.0vw;
+    line-height: 80%;
+    margin-bottom: 10%;
+    grid-column: 2/7;
+    width: 100%;
+    height:auto;
+}
     
     .header {
     grid-column: 2 / 7;
@@ -158,6 +203,28 @@
     grid-template-columns: 15px 1fr 1fr 1fr 1fr 1fr 15px; 
     -ms-grid-template-columns: 15px 1fr 1fr 1fr 1fr 1fr 15px; 
 } 
+    
+    .title {
+    font-size: 180px;
+    font-size: 19.5vw;
+    line-height: 70%;
+    margin-top: 25vh;
+    grid-column: 2/7;
+    width: 100%;
+    height:auto;
+    
+}
+
+.titleb {
+    font-size: 180px;
+    font-size: 20.0vw;
+    line-height: 80%;
+    margin-bottom: 10%;
+    grid-column: 2/7;
+    width: 100%;
+    height:auto;
+}
+
     
     .right2 {
             grid-column: 2 / 6;
